added desing login and features

--- a/src/app/pages/report/report-excel/report-excel.component.html
+++ b/src/app/pages/report/report-excel/report-excel.component.html
@@ -63,7 +63,7 @@
                   <button nbButton hero shape="semi-round" size="small" status="danger"
                     [mat-dialog-close]="false" >Cancelar</button>
 
-                  <button type="submit" [disabled]="loading" nbButton  hero shape="semi-round" size="small" status="primary"
+                  <button type="submit" [disabled]="submitted" nbButton  hero shape="semi-round" size="small" status="primary"
                    cdkFocusInitial style="float: left;">{{actionBtn}}</button>
 
               </mat-dialog-actions>
