--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,91 +1,103 @@
-<h1 id="title" class="title">Inicia sesión</h1>
-<p class="sub-title">¡Hola! Inicia sesión con tu correo electrónico.</p>
 
-<nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
-  <p class="alert-title"><b>Oh !</b></p>
-  <ul class="alert-message-list">
-    <li *ngFor="let error of errors" class="alert-message">Login/Email incorrecto, por favor intenta de nuevo.</li>
-  </ul>
-</nb-alert>
-<nb-alert *ngIf="messageInvalid" outline="danger" role="alert">
-  <p class="alert-title"><b>Oh !</b></p>
-  <ul class="alert-message-list">
-    <li  class="alert-message">{{messageInvalid}}</li>
-  </ul>
-</nb-alert>
+                  <div  class="row">
+                  <div  class="col-lg-8">
+
+                  </div>
+                  <div class="col-lg-4 container ">
+
+                    <h1 id="title" class="title">Login
+                      <img  class="img-fluid" alt="Responsive image" src="/assets/images/logopng.png">
+                    </h1>
+                    <p class="sub-title">¡Hola! Inicia sesión con tu correo electrónico.</p>
+                    <nb-alert *ngIf="showMessages.error && errors?.length && !submitted" outline="danger" role="alert">
+                      <p class="alert-title"><b>Oh !</b></p>
+                      <ul class="alert-message-list">
+                        <li *ngFor="let error of errors" class="alert-message">Login/Email incorrecto, por favor intenta de nuevo.</li>
+                      </ul>
+                    </nb-alert>
+                    <nb-alert *ngIf="messageInvalid" outline="danger" role="alert">
+                      <p class="alert-title"><b>Oh !</b></p>
+                      <ul class="alert-message-list">
+                        <li  class="alert-message">{{messageInvalid}}</li>
+                      </ul>
+                    </nb-alert>
+
+                    <form (ngSubmit)="login()" #form="ngForm" aria-labelledby="title" >
+
+                      <div class="form-control-group">
+                        <label class="label" for="input-email">Email address:</label>
+                        <input nbInput
+                               fullWidth
+                               [(ngModel)]="user.email"
+                               #email="ngModel"
+                               name="email"
+                               id="input-email"
+                               pattern=".+@.+\..+"
+                               placeholder="Email address"
+                               fieldSize="large"
+                               autofocus
+                               [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : 'basic'"
+                               [required]="getConfigValue('forms.validation.email.required')"
+                               [attr.aria-invalid]="email.invalid && email.touched ? true : null">
+                        <ng-container *ngIf="email.invalid && email.touched">
+                          <p class="caption status-danger" *ngIf="email.errors?.required">
+                            Email es requerido!
+                          </p>
+                          <p class="caption status-danger" *ngIf="email.errors?.pattern">
+                            Email should be the real one!
+                          </p>
+                        </ng-container>
+                      </div>
+
+                      <div class="form-control-group">
+                        <span class="label-with-link">
+                          <label class="label" for="input-password">Password:</label>
+                        </span>
+                        <input nbInput
+                               fullWidth
+                               [(ngModel)]="user.password"
+                               #password="ngModel"
+                               name="password"
+                               type="password"
+                               id="input-password"
+                               placeholder="Password"
+                               fieldSize="large"
+                               [status]="password.dirty ? (password.invalid  ? 'danger' : 'success') : 'basic'"
+                               [required]="getConfigValue('forms.validation.password.required')"
+                               [minlength]="getConfigValue('forms.validation.password.minLength')"
+                               [maxlength]="getConfigValue('forms.validation.password.maxLength')"
+                               [attr.aria-invalid]="password.invalid && password.touched ? true : null">
+                        <ng-container *ngIf="password.invalid && password.touched ">
+                          <p class="caption status-danger" *ngIf="password.errors?.required">
+                            Password es requerido!
+                          </p>
+                          <p class="caption status-danger" *ngIf="password.errors?.minlength || password.errors?.maxlength">
+                            Password should contain
+                            from {{ getConfigValue('forms.validation.password.minLength') }}
+                            to {{ getConfigValue('forms.validation.password.maxLength') }}
+                            characters
+                          </p>
+                        </ng-container>
+                      </div>
+
+                      <div class="form-control-group accept-group">
+                        <nb-checkbox name="rememberMe" [(ngModel)]="user.rememberMe" *ngIf="rememberMe">Recordar</nb-checkbox>
+                      </div>
+
+                      <button nbButton
+                              fullWidth
+                              status="primary"
+                              size="large"
+                              [disabled]="submitted || !form.valid"
+                              [class.btn-pulse]="submitted">
+                        Iniciar
+                      </button>
+                    </form>
+                    <br>
+                  </div>
 
 
+                </div>
 
-<form (ngSubmit)="login()" #form="ngForm" aria-labelledby="title">
-
-  <div class="form-control-group">
-    <label class="label" for="input-email">Email address:</label>
-    <input nbInput
-           fullWidth
-           [(ngModel)]="user.email"
-           #email="ngModel"
-           name="email"
-           id="input-email"
-           pattern=".+@.+\..+"
-           placeholder="Email address"
-           fieldSize="large"
-           autofocus
-           [status]="email.dirty ? (email.invalid  ? 'danger' : 'success') : 'basic'"
-           [required]="getConfigValue('forms.validation.email.required')"
-           [attr.aria-invalid]="email.invalid && email.touched ? true : null">
-    <ng-container *ngIf="email.invalid && email.touched">
-      <p class="caption status-danger" *ngIf="email.errors?.required">
-        Email es requerido!
-      </p>
-      <p class="caption status-danger" *ngIf="email.errors?.pattern">
-        Email should be the real one!
-      </p>
-    </ng-container>
-  </div>
-
-  <div class="form-control-group">
-    <span class="label-with-link">
-      <label class="label" for="input-password">Password:</label>
-    </span>
-    <input nbInput
-           fullWidth
-           [(ngModel)]="user.password"
-           #password="ngModel"
-           name="password"
-           type="password"
-           id="input-password"
-           placeholder="Password"
-           fieldSize="large"
-           [status]="password.dirty ? (password.invalid  ? 'danger' : 'success') : 'basic'"
-           [required]="getConfigValue('forms.validation.password.required')"
-           [minlength]="getConfigValue('forms.validation.password.minLength')"
-           [maxlength]="getConfigValue('forms.validation.password.maxLength')"
-           [attr.aria-invalid]="password.invalid && password.touched ? true : null">
-    <ng-container *ngIf="password.invalid && password.touched ">
-      <p class="caption status-danger" *ngIf="password.errors?.required">
-        Password es requerido!
-      </p>
-      <p class="caption status-danger" *ngIf="password.errors?.minlength || password.errors?.maxlength">
-        Password should contain
-        from {{ getConfigValue('forms.validation.password.minLength') }}
-        to {{ getConfigValue('forms.validation.password.maxLength') }}
-        characters
-      </p>
-    </ng-container>
-  </div>
-
-  <div class="form-control-group accept-group">
-    <nb-checkbox name="rememberMe" [(ngModel)]="user.rememberMe" *ngIf="rememberMe">Recordar</nb-checkbox>
-  </div>
-
-  <button nbButton
-          fullWidth
-          status="primary"
-          size="large"
-          [disabled]="submitted || !form.valid"
-          [class.btn-pulse]="submitted">
-    Iniciar
-  </button>
-</form>
 
 
