--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,6 +1,81 @@
-.navigation .link nb-icon {
-  display: none !important;
+
+::ng-deep nb-auth nb-card-header { display: none !important; }
+
+
+::ng-deep nb-auth nb-card-body{
+  background-image: url("/assets/images/fondo.jpg");
+  width: 100%;
+  min-height: 380px;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  height: 100%;
 }
-::ng-deep .navigation .link nb-icon {
-  display: none !important;
+
+/*::nb-layout-column {
+  height: 100%;
+  width: 100%;
 }
+*/
+.bg-img {
+  /* The image used */
+
+
+  /* Control the height of the image */
+  min-height: 20px;
+
+  /* Center and scale the image nicely */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  //position: relative;
+}
+
+/* Add styles to the form container */
+.container {
+
+  height: 100%;
+
+  background-color: white;
+
+}
+
+/* Full-width input fields */
+  input[type=text], input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  border: none;
+  background: #f1f1f1;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+/* Set a style for the submit button */
+.btn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 16px 20px;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.btn:hover {
+  opacity: 1;
+}
+
+
+  img {
+    border-radius: 4px;
+    padding: 5px;
+    width: 150px;
+  }
+
