--- a/src/app/pages/check-list/check-list-main/check-list-main.component.html
+++ b/src/app/pages/check-list/check-list-main/check-list-main.component.html
@@ -98,11 +98,11 @@ nbSpinnerMessage="Cargando ...">
           <button mat-icon-button color="primary" (click)="editarClient(element)">
               <mat-icon nbTooltip="Editar Remisión">edit</mat-icon>
           </button>
-            <!--
-              <button mat-icon-button color="warn" (click)="deleteClient(element)" [disabled]="element.status === 'close'">
+
+          <button *ngIf="isSuper" mat-icon-button color="warn" (click)="deleteRemision(element)">
               <mat-icon nbTooltip="Eliminar Remisión">delete</mat-icon>
-              </button>
-            -->
+          </button>
+
 
         </td>
       </ng-container>
