--- a/src/app/pages/check-out/check-out-pallet-out/check-out-pallet-out.component.scss
+++ b/src/app/pages/check-out/check-out-pallet-out/check-out-pallet-out.component.scss
@@ -1,3 +1,12 @@
+.example-chip-list {
+  width: 100%;
+}
+
+table {
+  width: 100%;
+}
+
+
 table {
   width: 100%;
 }
@@ -78,5 +87,3 @@ button {
 .wrap-label-text {
   white-space: normal;
 }
-
-
